# repoet

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
refree/: __init__.py  op.py  pattern.py  pattern.pyi
refree/tests/: new.py  test_pattern.py
repoet/: __init__.py  op.py  pattern.py  pattern.pyi
repoet/tests/: test_pattern.py
tests/: test_pattern.py
