[metadata]
name = repoet
version = attr: repoet.__version__
description = A readable regular expression builder
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/repoet
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: General

[options]
packages = find:
python_requires = >=3.7
install_requires =
    typing-extensions>=4.0.0; python_version < "3.8"

[options.packages.find]
exclude =
    tests*
    docs*

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.0
    black>=22.0
    isort>=5.0
    mypy>=0.900
    flake8>=3.9
docs =
    sphinx>=4.0
    sphinx-rtd-theme>=0.5

[flake8]
max-line-length = 88
extend-ignore = E203 